--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Feng-Yuan Frey Liu / Feng-Yuan Frey Liu's Home Page"
+title                    : "Feng-Yuan Frey Liu / Home Page"
 title_separator          : "-"
 name                     : &name "Feng-Yuan Frey Liu"
 description              : &description "I am a PhD student in Astronomy at Institute for Astronomy, the University of Edinburgh / Royal Observatory of Edinburgh."
