--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-a# Welcome to Jekyll!
+# Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your entire site, values
 # which you are expected to set up once and rarely need to edit after that.
@@ -8,27 +8,27 @@ a# Welcome to Jekyll!
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Feng-Yuan Frey Liu / Home Page"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Feng-Yuan Frey Liu"
-description              : &description "I am a PhD student in Astronomy at Institute for Astronomy, the University of Edinburgh / Royal Observatory of Edinburgh."
+name                     : &name "Your Name"
+description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "freyfyliu/freyfyliu.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "avatar.png"
-  name             : "Feng-Yuan Frey Liu"
-  pronouns         : # example: "He/Him"  
-  bio              : "PhD student in Astronomy"
-  location         : "Edinburgh, the United Kingdom"
-  employer         : "The University of Edinburgh"
+  avatar           : "profile.png"
+  name             : "Your Sidebar Name"
+  pronouns         : # example: "she/her"  
+  bio              : "Short biography for the left-hand sidebar"
+  location         : "Earth"
+  employer         : "Red Brick University"
   uri              : # URL
-  email            : "Fengyuan.Liu@ed.ac.uk" 
+  email            : "none@example.org" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
