--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,8 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Feng-Yuan Frey Liu"
-  name             : "刘丰源 /Lyeu Fahng-Yooahn/"
-  pronouns         : "He/Him"  
+  name             : "Feng-Yuan "Frey" Liu"
+  pronouns         : "刘丰源 /Lyeu Fahng-Yooahn/"
   bio              : "PhD student in Astronomy"
   location         : "Edinburgh, the UK"
   employer         : "The University of Edinburgh"
