--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/avatar.png"
+  avatar           : "/images/profile.png"
   name             : "Feng-Yuan 'Frey' Liu"
   pronouns         : "刘丰源 /Lyeu Fahng-Yooahn/"
   bio              : "PhD student in Astronomy"
