--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "刘丰源 /Lyeu Fahng-Yooahn/"
   bio              : "PhD student in Astronomy"
   location         : "Royal Observatory of Edinburgh"
-  employer         : "The University of Edinburgh"
+  employer         : "University of Edinburgh"
   uri              : # "freyfyliu.github.io"
   email            : "Fengyuan.Liu@ed.ac.uk" 
 
