--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "DSCF2545S.jpeg"
+  avatar           : "bio-photo-2.jpg"
   name             : "Feng-Yuan 'Frey' Liu"
   pronouns         : "He/Him"
   bio              : "PhD student in Astronomy"
