--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,18 +3,15 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Presentations"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Outreach"
     url: /teaching/    
     
-  - title: "Portfolio"
+  - title: "Hobbies"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
     
