--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Outreach"
     url: /teaching/    
     
-  - title: "Hobbies"
+  - title: "Gallery"
     url: /portfolio/
         
   - title: "CV"
