--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "bio-photo-2.jpg"
   name             : "Feng-Yuan 'Frey' Liu"
-  pronouns         : "He/Him"
+  pronouns         : "刘丰源 He/Him"
   bio              : "PhD student in Astronomy"
   location         : "Royal Observatory of Edinburgh"
   employer         : "University of Edinburgh"
