--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,22 @@
 # main links links
 main:
+  - title: "Research"
+    url: /research/
+    
   - title: "Publications"
     url: /publications/
 
   - title: "Presentations"
-    url: /talks/    
+    url: /presentations/    
 
   - title: "Outreach"
-    url: /teaching/    
+    url: /outreach/    
     
   - title: "Gallery"
-    url: /portfolio/
+    url: /gallery/
         
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "News"
+    url: /news/
