--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-# Welcome to Jekyll!
+# Welcome to my personal website!
 #
 # This config file is meant for settings that affect your entire site, values
 # which you are expected to set up once and rarely need to edit after that.
@@ -214,6 +214,9 @@ collections:
     output: true
     permalink: /:collection/:path/
   gallery:
+    output: true
+    permalink: /:collection/:path/
+  cv:
     output: true
     permalink: /:collection/:path/
 
